--- a/api/package.json
+++ b/api/package.json
@@ -13,9 +13,12 @@
     "@aws-sdk/client-s3": "^3.635.0",
     "@aws-sdk/s3-request-presigner": "^3.635.0",
     "@supabase/storage-js": "^2.7.0",
+    "@types/cors": "^2.8.17",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-fileupload": "^1.5.1",
+    "express-winston": "^4.2.0",
     "pg": "^8.12.0",
     "reflect-metadata": "^0.2.2",
     "sqlite3": "^5.1.7",
