--- a/api/package.json
+++ b/api/package.json
@@ -4,7 +4,7 @@
   "main": "server.ts",
   "scripts": {
     "start": "tsx server.ts",
-    "seed": "tsx seed.ts"
+    "test": "jest"
   },
   "author": "",
   "license": "MIT",
@@ -27,8 +27,11 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.12",
     "@types/node": "^22.5.0",
     "@types/validator": "^13.12.0",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.2.4",
     "tsx": "^4.17.0"
   }
 }
