--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -4,6 +4,7 @@
     "target": "ESNext",
     "module": "NodeNext",
     "experimentalDecorators": true,
-    "emitDecoratorMetadata": true
+    "emitDecoratorMetadata": true,
+    "esModuleInterop": true
   }
 }
