--- a/api/package.json
+++ b/api/package.json
@@ -3,27 +3,27 @@
   "version": "1.0.0",
   "main": "server.ts",
   "scripts": {
-    "start": "tsx server.ts",
+    "start": "tsx app.ts",
     "test": "jest"
   },
   "author": "",
   "license": "MIT",
   "description": "",
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.635.0",
-    "@aws-sdk/s3-request-presigner": "^3.635.0",
-    "@supabase/storage-js": "^2.7.0",
+    "@aws-sdk/client-s3": "^3.637.0",
+    "@aws-sdk/cloudfront-signer": "^3.621.0",
+    "@aws-sdk/credential-providers": "^3.637.0",
+    "@aws-sdk/s3-request-presigner": "^3.637.0",
     "@types/cors": "^2.8.17",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "express-fileupload": "^1.5.1",
     "express-winston": "^4.2.0",
     "pg": "^8.12.0",
     "reflect-metadata": "^0.2.2",
-    "sqlite3": "^5.1.7",
     "typeorm": "^0.3.20",
-    "winston": "^3.14.2"
+    "winston": "^3.14.2",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
