--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "strict": true,
     "moduleResolution": "NodeNext",
     "target": "ESNext",
     "module": "NodeNext",
