--- a/deploy/compose.local.yaml
+++ b/deploy/compose.local.yaml
@@ -36,6 +36,7 @@ services:
         -s3-bucket=sourcedev,
         -s3-object-prefix=tusd,
         -hooks-http=http://upload-api:5001,
-        -cors-allow-origin=http://localhost:4000,
+        -cors-allow-origin=https://source.localhost,
         -cors-allow-headers=X-API-KEY,
+        -behind-proxy,
       ]
