--- a/api/package.json
+++ b/api/package.json
@@ -15,6 +15,8 @@
     "@aws-sdk/cloudfront-signer": "^3.621.0",
     "@aws-sdk/credential-providers": "^3.637.0",
     "@aws-sdk/s3-request-presigner": "^3.637.0",
+    "@tus/s3-store": "^1.6.0",
+    "@tus/server": "^1.9.0",
     "@types/cors": "^2.8.17",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
