--- a/deploy/compose.local.yaml
+++ b/deploy/compose.local.yaml
@@ -1,10 +1,12 @@
 services:
   dashboard:
     image: source-dashboard/local
+    build: ../dashboard
     ports:
       - "4000:4000"
   api:
     image: source-api/local
+    build: ../api
     ports:
       - "4001:4001"
     expose:
@@ -12,31 +14,4 @@ services:
     env_file: "s3.env"
     environment:
       PORT: "4001"
-  upload-api:
-    image: source-upload-api/local
-    ports:
-      - "5001:5001"
-    expose:
-      - 5001
-    env_file:
-      - path: "s3.env"
-      - path: "pg.env"
-    environment:
-      PORT: "5001"
-      S3_BUCKET: "sourcedev"
-  tusd:
-    image: tusproject/tusd:latest
-    ports:
-      - "8080:8080"
-    env_file: "s3.env"
-    depends_on:
-      - upload-api
-    command:
-      [
-        -s3-bucket=sourcedev,
-        -s3-object-prefix=tusd,
-        -hooks-http=http://upload-api:5001,
-        -cors-allow-origin=https://source.localhost,
-        -cors-allow-headers=X-API-KEY,
-        -behind-proxy,
-      ]
+      S3_BUCKET: "source"
