remove upload api from build workflow

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -12,7 +12,7 @@ jobs:
   docker_publish:
     strategy:
       matrix:
-        app: ["api", "dashboard", "upload-api"]
+        app: ["api", "dashboard"]
     runs-on: ubuntu-latest
     permissions:
       packages: write
